Mobile overflow fix

--- a/greater/less/grayscale.less
+++ b/greater/less/grayscale.less
@@ -148,7 +148,7 @@ a {
         }
     }
     @media(max-width:768px) {
-        background-color: transparent;
+        display: none;
     }
     @media(max-width:968px) {
         .navbar-brand {
